// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/button/Snapshots Primary Disabled smoke-test 1`] = `
<button data-variant="primary"
        type="button"
        disabled
>
  Action
</button>
`;

exports[`components/button/Snapshots Primary smoke-test 1`] = `
<button data-variant="primary"
        type="button"
>
  Action
</button>
`;

exports[`components/button/Snapshots Secondary Disabled smoke-test 1`] = `
<button data-variant="secondary"
        type="button"
        disabled
>
  Action
</button>
`;

exports[`components/button/Snapshots Secondary smoke-test 1`] = `
<button data-variant="secondary"
        type="button"
>
  Action
</button>
`;

exports[`components/button/Snapshots Tertiary Disabled smoke-test 1`] = `
<button data-variant="tertiary"
        type="button"
        disabled
>
  Action
</button>
`;

exports[`components/button/Snapshots Tertiary smoke-test 1`] = `
<button data-variant="tertiary"
        type="button"
>
  Action
</button>
`;
